<resources>
    <string name="app_name"> Heróis Marvel </string>
    <string name="bem_vindo"> Bem vindo ao Marvel Heroes </string>
    <string name="escolha"> Escolha o seu personagem </string>

    <string name="hero"> Heróis </string>
    <string name="AntiHero"> Anti-Heróis </string>
    <string name="Alienigena"> Alienígenas </string>
    <string name="Humano"> Humanos </string>
    <string name="Outros"> Outros </string>
    <string name="vilao"> Vilões </string>

    <string name="ver_tudo"> Ver tudo </string>

    <string name="txt">Em Forest Hills, Queens, Nova York, o estudante de ensino médio, Peter Parker, é um cientista orfão que vive com seu tio Ben e tia May. Ele é mordido por uma aranha radioativa em uma exposição científica e adquire a agilidade e a força proporcional de um aracnídeo. Junto com a super força, Parker ganha a capacidade de andar nas paredes e tetos.

Através de sua habilidade nativa para a ciência, ele desenvolve um aparelho que o permitir lançar teias artificiais. Inicialmente buscando capitalizar suas novas habilidades, Parker cria um traje e, como Homem Aranha, torna-se uma estrela de televisão. </string>
    <string name="hablilidades">Hablilidades</string>
    <string name="filmes">Filmes</string>
</resources>