<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.MainActivity">

    <ScrollView
        android:id="@+id/scrooll_main_principal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/Lienar_main_principal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear_main_topo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_64"
                android:layout_margin="@dimen/dp_16"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_main_icMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_menu" />

                <ImageView
                    android:id="@+id/image_main_icLogo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_logo"
                    app:tint="@color/logo" />

                <ImageView
                    android:id="@+id/image_main_icPesquisa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_pesquisa" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_main_textoApresentacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_24"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_main_bemVindo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bem_vindo"
                    android:textColor="@color/texto_cinza"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_main_escolha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/escolha"
                    android:textColor="@color/texto_preto"
                    android:textSize="32sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_main_icones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_32"
                android:layout_marginRight="@dimen/dp_24"
                android:layout_marginBottom="@dimen/dp_24"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_main_icHero"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_category_hero" />

                <ImageView
                    android:id="@+id/image_main_icVilao"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_category_villain" />

                <ImageView
                    android:id="@+id/image_main_icAntiHero"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_category_antihero" />

                <ImageView
                    android:id="@+id/ic_main_icAlienigena"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_category_alien" />

                <ImageView
                    android:id="@+id/image_main_icHumano"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_category_human" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/texto_cinza"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_main_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_margin="@dimen/dp_8"
                    android:background="@drawable/ic_baseline_clear_24"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_main_hide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_8"
                    android:visibility="gone" />


            </LinearLayout>

            <RelativeLayout
                android:id="@+id/relative_main_classificacaoHerois"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_24"
                android:layout_marginRight="@dimen/dp_24">


                <TextView
                    android:id="@+id/text_main_heroi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hero"
                    android:textColor="@color/logo"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_main_verTudo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/ver_tudo"
                    android:textColor="@color/texto_cinza"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_main_heroi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16" />

            <RelativeLayout
                android:id="@+id/relative_main_classificacaoVilao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_48"
                android:layout_marginRight="@dimen/dp_24">

                <TextView
                    android:id="@+id/text_main_vilao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vilao"
                    android:textColor="@color/logo"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/ver_tudo"
                    android:textColor="@color/texto_cinza"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_main_vilao"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16" />


            <RelativeLayout
                android:id="@+id/relative_main_classificacaoAntiHerois"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_48"
                android:layout_marginRight="@dimen/dp_24">

                <TextView
                    android:id="@+id/text_main_AntiHero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/AntiHero"
                    android:textColor="@color/logo"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/ver_tudo"
                    android:textColor="@color/texto_cinza"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_main_anti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="16dp" />

            <RelativeLayout
                android:id="@+id/relative_main_classificacaoAlienigenas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_48"
                android:layout_marginRight="@dimen/dp_24">

                <TextView
                    android:id="@+id/text_main_Alienigena"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Alienigena"
                    android:textColor="@color/logo"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/ver_tudo"
                    android:textColor="@color/texto_cinza"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_main_alienigena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="16dp" />

            <RelativeLayout
                android:id="@+id/relative_main_classificacaoHumanos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_48"
                android:layout_marginRight="@dimen/dp_24">

                <TextView
                    android:id="@+id/text_main_Humanos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Humano"
                    android:textColor="@color/logo"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/ver_tudo"
                    android:textColor="@color/texto_cinza"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_main_Humano"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp" />

           <RelativeLayout
                android:id="@+id/relative_main_Api"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_48"
                android:layout_marginRight="@dimen/dp_24">

                <TextView
                    android:id="@+id/text_main_Api"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Outros"
                    android:textColor="@color/logo"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/ver_tudo"
                    android:textColor="@color/texto_cinza"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_main_Api"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>